--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "buffer": "^6.0.3",
     "near-api-js": "0.44.2",
     "near-units": "^0.1.9",
+    "random": "^3.0.6",
+    "random-int": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -43,6 +46,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.4.2"
   }
 }
